punto1/gramatica.txt
Gramatica para operaciones CRUD en base de datos NoSQL
======================================================

Esta gramatica define un lenguaje para realizar operaciones
CRUD (Crear, Leer, Actualizar, Eliminar) sobre una base de
datos no relacional, similar a MongoDB.

Terminales:
  Palabras reservadas: CREAR, USAR, INSERTAR, BUSCAR, ACTUALIZAR,
                       ELIMINAR, BASE, COLECCION, EN, DOCUMENTO,
                       DONDE, CON, TODO, Y, O, VERDADERO, FALSO
  Literales:           ID, CADENA, NUMERO
  Simbolos:            { } [ ] : , ;
  Operadores:          == != > < >= <=

No Terminales:
  programa, sentencias, sentencia, crear_db, usar_db, crear_col,
  insertar, buscar, actualizar, eliminar, documento, pares, par,
  valor, lista, condiciones, condicion, operador

Simbolo Inicial: programa

Producciones:
--------------

programa      -> sentencias

sentencias    -> sentencia ';' sentencias
               | sentencia ';'

sentencia     -> crear_db
               | usar_db
               | crear_col
               | insertar
               | buscar
               | actualizar
               | eliminar

crear_db      -> CREAR BASE ID

usar_db       -> USAR ID

crear_col     -> CREAR COLECCION ID

insertar      -> INSERTAR EN ID DOCUMENTO documento

buscar        -> BUSCAR EN ID TODO
               | BUSCAR EN ID DONDE condiciones

actualizar    -> ACTUALIZAR EN ID DONDE condiciones CON documento

eliminar      -> ELIMINAR EN ID DONDE condiciones

documento     -> '{' pares '}'

pares         -> par ',' pares
               | par

par           -> CADENA ':' valor

valor         -> CADENA
               | NUMERO
               | VERDADERO
               | FALSO
               | documento
               | '[' lista ']'

lista         -> valor ',' lista
               | valor
               | vacio

condiciones   -> condicion Y condiciones
               | condicion O condiciones
               | condicion

condicion     -> CADENA operador valor

operador      -> '==' | '!=' | '>' | '<' | '>=' | '<='


Notas:
------
- Las palabras reservadas son insensibles a mayusculas/minusculas
  (ej: "crear", "CREAR" y "Crear" son equivalentes)
- CADENA son cadenas entre comillas dobles: "ejemplo"
- NUMERO puede ser entero o decimal: 42, 3.14
- ID es un identificador que empieza con letra: miColeccion, datos_2024
- Los documentos se representan con llaves {} como en JSON
- Las listas se representan con corchetes []
